fix text output box becoming too small

--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,8 @@ input[type="radio"]{
   column-gap: .75em;
 }
 .lorem-text{
-  margin: 10px;
+  /* margin: 10px; */
+  min-width: 100%;
   min-height: 200px;
   text-align: center;
   background-color: rgb(26, 26, 26);
